--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-<h1>Quik Draw
+<h1>Quick Draw
 <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
 </h1>
 <p id="label">Label : </p>
